# WealthManager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Common/: CMakeLists.txt  place_holder.cpp  uri.h
Common/DTO/: conversionrates.h  investments.cpp  investments.h  user.h
QTClient/Client/: CMakeLists.txt  Utils.h  addnewuser.cpp  addnewuser.h  addnewuser.ui  changepassword.cpp  changepassword.h  changepassword.ui  confirmationdialog.cpp  confirmationdialog.h  confirmationdialog.ui  constants.h  errordialog.cpp  errordialog.h  errordialog.ui  investments.cpp  investments.h  investmentstab.cpp  investmentstab.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newinvestment.cpp  newinvestment.h  newinvestment.ui  overview.cpp  overview.h  userlistwindow.cpp  userlistwindow.h  userlistwindow.ui  utils.cpp  utils.h
Server/: CMakeLists.txt
Server/src/: CMakeLists.txt  currencyconverter.cpp  currencyconverter.h  httpserver.cpp  httpserver.h  investmentsmanager.cpp  investmentsmanager.h  investmentsmanager_facade.cpp  investmentsmanager_facade.h  investmentsrepository.cpp  investmentsrepository.h  main.cpp  usermanager.cpp  usermanager.h  usermanager_facade.cpp  usermanager_facade.h  userrepository.cpp  userrepository.h
Server/test/: mock.cpp
cmake/: FindCppRest.cmake
images/: slides.pptx
